# Cocotb_UART_example

./: .gitignore  Makefile  Readme.md  makefile  results.xml
.poetry/: pyproject.toml
config/: pydoc.yml
configs/: environment.yml  project_tree.json  pydoc.yml  pyproject.toml  pytest.ini
docs/: UML_uart.md  history.md  input.d2  tasks.md  todo.md  verification_plan.md
docs/schemas/: UML.md  uml.d2
docs/specs/: Architectural.md
docs/tasks/: llm.md
docs/wiki/: htw.md
scripts/: install_d2.sh  install_pandoc.sh  install_poetry.sh  install_verilator.sh  start.sh  veri.sh
scripts/tools/: install_check.sh  install_conda.sh  install_env.sh  install_poetry.sh  install_surfer.sh  listen_port.sh
src/: a.out  axils.sv  fifo.sv  header.svh  sync.sv  uart.sv  uart_bridge.sv  uart_rx.sv  uart_rx_mem.sv  uart_tx.sv
temp/: res.xml  res_uart_rx.xml  res_uart_tx.xml  uvm.py
test/: .coverage  Makefile  cocotb_runner.py  design.py  field.py  kek.py  results.xml  test_axils.py  test_fifo.py  test_uart.py  test_uart_rx.py  test_uart_tx.py
test/coverage/: .coverage
test/dump/: axils.fst  fifo.fst  uart_rx.fst
test/lib/: axi.py  axilm.py  config.py  const.py  kek.py  logger.py  logging.py  model.py  ports.py  transaction.py  uvm.py  uvmn.py
test/log/: axils_results.xml  fifo_results.xml  uart_rx_results.xml  uart_tx_results.xml
test/logs/: axils_results.xml  fifo_results.xml  uart_rx_results.xml  uart_tx_results.xml
test/modules/: test_axils.py  test_fifo.py  test_uart.py
test/playground/axils/icarus/: sim.vvp
test/tests/: cocotb_runner.py  const_test.py
(+31 files in other folders)
