[tool.poetry]
name = "-poetry"
version = "0.1.0"
description = ""
authors = ["Anton Vovk <anton.s.vovk@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
cocotb = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
