[project]
name = "uart"
version = "0.1.0"
description = "Dependencies config"
authors = []
license = {text = "n"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "cocotb (>=1.9.2,<2.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "debugpy (>=1.8.14,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
